--- a/biblio.bib
+++ b/biblio.bib
@@ -23,7 +23,7 @@
 	edition = {5th},
 }
 @book {Batchelor2000,
-	author = {Batchelor, George},
+	author = {Batchelor, George K.},
 	title = {An {I}ntroduction to {F}luid {D}ynamics},
 	publisher = {Cambridge University Press},
 	year = {2000},
