Added Gradshteyn & Ryzhik.

--- a/biblio.bib
+++ b/biblio.bib
@@ -20,7 +20,7 @@
 	publisher = {McGraw-Hill: New York},
 	year = {2011},
 	month = {},
-	edition = {5th},
+	edition = {fifth},
 }
 @book {Batchelor2000,
 	author = {Batchelor, George K.},
@@ -45,7 +45,7 @@
 	publisher = {Springer-Verlag: Berlin},
 	year = {1990},
 	month = {},
-	edition = {2nd},
+	edition = {second},
 	annot = {Zbl has second edition 1990 and third edition 1993}
 }
 @article {ColemanNoll1959,
@@ -111,7 +111,7 @@
 	title = {Advanced Calculus},
 	publisher = {Wiley: New York},
 	year = {1978},
-	edition = {3rd},
+	edition = {third},
 	month = {},
 }
 @book {Galdi1994,
@@ -138,6 +138,14 @@
 	volume = {3},
 	publisher = {Academic Press},
 	year = {1967},
+	month = {},
+}
+@book {GradshteynRyzhik1980,
+	author = {Gradshteyn, Izrail S. and Ryzhik, Iosif M.},
+	title = {Table of Integrals, Series, and Products},
+	publisher = {Academic Press: New York},
+	edition = {fourth},
+	year = {1980},
 	month = {},
 }
 @book {GuentherLee1988,
@@ -255,7 +263,7 @@
 	author = {Magnus, Wilhelm and Oberhettinger, Fritz and Soni, Raj P.},
 	title = {Formulas and Theorems for the Special Functions of Mathematical Physics},
 	publisher = {Springer-Verlag: New York},
-	edition = {3rd},
+	edition = {third},
 	year = {1966},
 }
 @book {Maugin2013,
@@ -281,14 +289,14 @@
 	author = {Milne-Thomson, Louis M.},
 	title = {Theoretical Aerodynamics},
 	publisher = {Dover Publications: New York},
-	edition = {4th},
+	edition = {fourth},
 	year = {1973},
 }
 @book {MilneThomson1996,
 	author = {Milne-Thomson, Louis M.},
 	title = {Theoretical Hydrodynamics},
 	publisher = {Dover Publications: New York},
-	edition = {5th},
+	edition = {fifth},
 	year = {1996},
 }
 @misc {Mei2002,
