--- a/biblio.bib
+++ b/biblio.bib
@@ -48,6 +48,16 @@
 	edition = {second},
 	annot = {Zbl has second edition 1990 and third edition 1993}
 }
+@article {ChwangWu1975,
+	author = {Chwang, Allen T. and Wu, T. Yao-Tsu},
+	title = {Hydromechanics of low-{R}eynolds-number flow. {P}art 2. {S}ingularity method for {S}tokes flows},
+	journal = {Journal of Fluid Mechanics},
+	year = {1975},
+	volume = {67},
+	number = {4},
+	pages = {787--815},
+	issn = {},
+}
 @article {ColemanNoll1959,
 	author = {Coleman, Bernard D. and Noll, Walter},
 	title = {On certain steady flows of general fluids},
