--- a/biblio.bib
+++ b/biblio.bib
@@ -14,6 +14,13 @@
 	year = {},
 	month = {},
 }
+@book {Adams1975,
+	author = {Adams, Robert A.},
+	title = {Sobolev Spaces},
+	publisher = {Academic Press: Orlando, Florida},
+	year = {1975},
+	month = {},
+}
 @book {Anderson2011,
 	author = {Anderson, {Jr}., John D.},
 	title = {Fundamentals of Aerodynamics},
@@ -39,6 +46,14 @@
 	pages = {148--149},
 	annot = {Date appears to be 1951 for Zbl rather than 1964},
 }
+@book {ChoquetBruhatDewittMoretteDillardBleick,
+	author = {Choquet-Bruhat, Yvonne and DeWitt-Morette, C\'ecile and Dillard-Bleick, Margaret},
+	title = {Analysis, Manifolds and Physics},
+	publisher = {Elsevier: New York},
+	year = {1982},
+	month = {},
+	edition = {revised},
+}
 @book {ChorinMarsden1990,
 	author = {Chorin, Alexandre J. and Marsden, Jerrold E.},
 	title = {A Mathematical Introduction to Fluid Mechanics},
@@ -47,6 +62,13 @@
 	month = {},
 	edition = {second},
 	annot = {Zbl has second edition 1990 and third edition 1993}
+}
+@book {Chung1988,
+	author = {Chung, T. J.},
+	title = {Continuum Mechanics},
+	publisher = {Prentice Hall: Englewood Cliffs, New Jersey},
+	year = {1988},
+	month = {},
 }
 @article {ChwangWu1975,
 	author = {Chwang, Allen T. and Wu, T. Yao-Tsu},
@@ -86,6 +108,13 @@
 	volume = {II},
 	edition = {},
 }
+@book {DeRham1955,
+	author = {{d}e {R}ham, Georges},
+	title = {Vari\'et\'es Diff\'erentiables},
+	publisher = {Hermann: Paris},
+	year = {1955},
+	month = {},
+}
 @article {Duering2009,
 	author = {Deuring, Paul},
 	title = {Spatial decay of time-dependent {O}seen flows},
@@ -94,13 +123,6 @@
 	volume = {41},
 	number = {3},
 	pages = {886--922},
-}
-@book {DeRham1955,
-	author = {{d}e {R}ham, Georges},
-	title = {Vari\'et\'es Diff\'erentiables},
-	publisher = {Hermann: Paris},
-	year = {1955},
-	month = {},
 }
 @book {Erdelyi1956,
 	author = {Erd\'elyi, Arthur},
@@ -221,7 +243,7 @@
 }
 @article {Joseph2006,
 	author = {Joseph, Daniel D.},
-	title = {Potential flow of viscous fluids: Historical notes},
+	title = {Potential flow of viscous fluids: historical notes},
 	journal = {International Journal of Multiphase Flow},
 	year = {2006},
 	volume = {32},
@@ -268,6 +290,7 @@
 	title = {A Treatise on the Mathematical Theory of Elasticity},
 	publisher = {Cambridge University Press},
 	year = {1927},
+	note = {Reprint 1944, Dover Publications: New York},
 }
 @book {MagnusOberhettingerSoni1966,
 	author = {Magnus, Wilhelm and Oberhettinger, Fritz and Soni, Raj P.},
@@ -331,7 +354,7 @@
 	series = {Die {G}rundlehren der mathematischen {W}issenschaften in {E}inzeldarstellungen 88},
 	publisher = {Springer-Verlag: Berlin},
 	year = {1957},
-	note = {English translation 1969, {\it Foundations of the Mathematical Theory of Electromagnetic Waves}, Springer-Verlag: Berlin}
+	note = {English translation 1969, {\it Foundations of the Mathematical Theory of Electromagnetic Waves}, Springer-Verlag: Berlin},
 }
 @book {Muller1985,
 	author = {M{\"u}ller, Ingo},
@@ -354,14 +377,6 @@
 	title = {Advanced Calculus},
 	publisher = {D. Van Nostrand Company: Princeton, New Jersey},
 	year = {1959},
-}
-@article {Odqvist1930,
-	author = {Odqvist, Folke K. G.},
-	title = {{\"U}ber die {R}andwertaufgaben der {H}ydrodynamik z\"aher {F}l\"ussigkeiten},
-	journal = {Mathematische Zeitschrift},
-	year = {1930},
-	volume = {32},
-	pages = {329--375},
 }
 @misc {NIST:DLMF,
 	key = {{\relax DLMF}},
@@ -394,6 +409,14 @@
 	publisher = {North-Holland: Amsterdam},
 	year = {1959},
 }
+@article {Odqvist1930,
+	author = {Odqvist, Folke K. G.},
+	title = {{\"U}ber die {R}andwertaufgaben der {H}ydrodynamik z\"aher {F}l\"ussigkeiten},
+	journal = {Mathematische Zeitschrift},
+	year = {1930},
+	volume = {32},
+	pages = {329--375},
+}
 @article {Odqvist1932,
 	author = {Odqvist, Folke K. G.},
 	title = {Beitr\"age zur {T}heorie der nichtstation\"aren z\"ahen {F}l\"ussigkeitsbewegungen. {I}},
@@ -418,7 +441,7 @@
 %%{https://www.ams.org/journals/qam/1987-45-03/S0033-569X-1987-0910459-0/}
 @article {Oseen1910,
 	author = {Oseen, Carl W.},
-	title = {\"Uber die {S}tokes'sche {F}ormel und \"uber eine verwandte {A}ufgabe in der {H}ydrodynamik},
+	title = {{\"U}ber die {S}tokes'sche {F}ormel und \"uber eine verwandte {A}ufgabe in der {H}ydrodynamik},
 	journal = {Arkiv f\"or Matematik, Astronomi och Fysik},
 	year = {1910},
 	volume = {6},
@@ -439,6 +462,22 @@
 	year = {1933},
 	month = {},
 }
+@book {Post1997,
+	author = {Post, E. J.},
+	title = {Formal Structure of Electromagnetics: General Covariance and Electromagnetics},
+	publisher = {Dover Publications: New York},
+	year = {1997},
+	month = {},
+	note = {Reprint of 1962 edition, Interscience Publishers: New York}
+}
+@book {PrandtlTietjens1957,
+	author = {Prandtl, Ludwig and Tietjens, Oskar K. G.},
+	title = {Fundamentals of Hydro- and Aeromechanics},
+	publisher = {Dover Publications: New York},
+	year = {1957},
+	month = {},
+	note = {Reprint of 1934 edition}
+}
 @article {ProudmanPearson1957,
 	author = {Proudman, Ian and Pearson, J. R. A.},
 	title = {Expansions at small {R}eynolds numbers for the flow past a sphere and a circular cylinder},
@@ -447,6 +486,27 @@
 	volume = {2},
 	number = {3},
 	pages = {237--262},
+}
+@book {PrudnikovBrychkovMarichev1986a,
+	author = {Prudnikov, Anatoli\u{\i} P. and Brychkov, Yuri\u{\i} A. and Marichev, Oleg I.},
+	title = {Integrals and Series. Volume 1: Elementary Functions},
+	publisher = {Gordon and Breach Science Publishers: New York},
+	year = {1986},
+	month = {},
+}
+@book {PrudnikovBrychkovMarichev1986b,
+	author = {Prudnikov, Anatoli\u{\i} P. and Brychkov, Yuri\u{\i} A. and Marichev, Oleg I.},
+	title = {Integrals and Series. Volume 2: Special Functions},
+	publisher = {Gordon and Breach Science Publishers: New York},
+	year = {1986},
+	month = {},
+}
+@book {PrudnikovBrychkovMarichev1990,
+	author = {Prudnikov, Anatoli\u{\i} P. and Brychkov, Yuri\u{\i} A. and Marichev, Oleg I.},
+	title = {Integrals and Series. Volume 3: More Special Functions},
+	publisher = {Gordon and Breach Science Publishers: New York},
+	year = {1990},
+	month = {},
 }
 @article {RivlinEricksen1955,
 	author = {Rivlin, Ronald S. and Ericksen, Jerald L.},
@@ -483,6 +543,24 @@
 	volume = {VIII/1},
 	publisher = {Springer-Verlag: Berlin, Heidelberg},
 	year = {1959},
+	month = {},
+}
+@article {ShuChwang2001,
+	author = {Shu, Jian-Jun and Chwang, Allen T.},
+	title = {Generalized fundamental solutions for unsteady viscous flows},
+	journal = {Physical Review E},
+	year = {2001},
+	month = {April},
+	volume = {63},
+	issue = {5},
+	pages = {051201},
+	issn = {},
+}
+@book {Smith1994,
+	author = {Smith, Gerald F.},
+	title = {Constitutive Equations for Anisotropic and Isotropic Materials},
+	publisher = {North-Holland: New York},
+	year = {1994},
 	month = {},
 }
 @article {Smith1987,
@@ -617,4 +695,20 @@
 	volume = {III/1},
 	publisher = {Springer-Verlag: Berlin},
 	year = {1960},
+}
+@book {Wang1979a,
+	author = {Wang, Chao-Cheng},
+	title = {Mathematical Principles of Mechanics and Electromagnetism. Part A: Analytical and Continuum Mechanics},
+	volume = {},
+	publisher = {Plenum Press: New York},
+	year = {1979},
+	month = {},
+}
+@book {Wang1979b,
+	author = {Wang, Chao-Cheng},
+	title = {Mathematical Principles of Mechanics and Electromagnetism. Part B: Electromagnetism and Gravitation},
+	volume = {},
+	publisher = {Plenum Press: New York},
+	year = {1979},
+	month = {},
 }
