--- a/biblio.bib
+++ b/biblio.bib
@@ -131,6 +131,20 @@
 	year = {1956},
 	month = {},
 }
+@book {EringenMaugin1990a,
+	author = {Eringen, A. Cemal and Maugin, G\'erard A.},
+	title = {Electrodynamics of Continua I: Foundations and Solid Media},
+	publisher = {Springer-Verlag: New York},
+	year = {1990},
+	month = {},
+}
+@book {EringenMaugin1990b,
+	author = {Eringen, A. Cemal and Maugin, G\'erard A.},
+	title = {Electrodynamics of Continua II: Fluids and Complex Media},
+	publisher = {Springer-Verlag: New York},
+	year = {1990},
+	month = {},
+}
 @book {Friedman1964,
 	author = {Friedman, Avner},
 	title = {Partial Differential Equations of Parabolic Type},
@@ -251,7 +265,7 @@
 	pages = {285--310},
 }
 @article {KaplunLagerstrom1957,
-	author = {Kaplun, Saul and Lagerstrom, P. A.},
+	author = {Kaplun, Saul and Lagerstrom, Paco A.},
 	title = {Asymptotic expansions of {N}avier-{S}tokes solutions for small {R}eynolds numbers},
 	journal = {Journal of Mathematics and Mechanics},
 	year = {1957},
@@ -266,6 +280,21 @@
 	year = {1929},
 	month = {},
 	note = {Reprint 1953, Dover Publications: New York}
+}
+@book {KimKarrila2005,
+	author = {Kim, Sangtae and Karrila, Seppo J.},
+	title = {Microhydrodynamics: Principles and Selected Applications},
+	publisher = {Dover Publications: New York},
+	year = {2005},
+	month = {},
+	note = {Reprint of 1991 edition, Butterworth-Heinemann: Boston and London},
+}
+@book {KiralEringen1990,
+	author = {Kiral, Ehran and Eringen, A. Cemal},
+	title = {Constitutive Equations of Nonlinear Electromagnetic-Elastic Crystals},
+	publisher = {Springer-Verlag: New York},
+	year = {1990},
+	month = {},
 }
 @book {Ladyzhenskaya1963,
 	author = {Ladyzhenskaya, Olga A.},
